--- a/qcom-sdk36/Catalan/main/MiMover.apk/res/values-ca/plurals.xml
+++ b/qcom-sdk36/Catalan/main/MiMover.apk/res/values-ca/plurals.xml
@@ -37,12 +37,12 @@
         <item quantity="other">Fa %d minuts</item>
     </plurals>
     <plurals name="app_update_64_dialog_message_formatted">
-        <item quantity="one">%1$d app on this device can be updated from %2$d-bit to %3$d-bit architecture. Update this app to boost its performance.</item>
-        <item quantity="other">%1$d apps on this device can be updated from %2$d-bit to %3$d-bit architecture. Update these apps to boost their performance.</item>
+        <item quantity="one">"%1$d aplicació d'aquest dispositiu es pot actualitzar d'una arquitectura de %2$d bits a una arquitectura de %3$d bits. Actualitzeu aquesta aplicació per millorar-ne el rendiment."</item>
+        <item quantity="other">"%1$d aplicacions d'aquest dispositiu es pot actualitzar d'una arquitectura de %2$d bits a una arquitectura de %3$d bits. Actualitzeu aquestes aplicacions per millorar-ne el rendiment."</item>
     </plurals>
     <plurals name="app_update_64_notification_title_formatted">
-        <item quantity="one">A %2$d-bit version for %1$d app is available</item>
-        <item quantity="other">A %2$d-bit version for %1$d apps are available</item>
+        <item quantity="one">Hi ha disponible una versió de %2$d bits per a %1$d aplicació</item>
+        <item quantity="other">Hi ha disponible una versió de %2$d bits per a %1$d aplicacions</item>
     </plurals>
     <plurals name="apple_install_install_immediately">
         <item quantity="one">Instal·la %d aplicació</item>
