--- a/qcom-sdk36/Italian/main/SecurityCenter.apk/res/values-it/arrays.xml
+++ b/qcom-sdk36/Italian/main/SecurityCenter.apk/res/values-it/arrays.xml
@@ -154,7 +154,7 @@
     </string-array>
     <string-array name="miui_optimization_close_intercept">
         <item>Importante: più app di sistema potrebbero smettere di funzionare correttamente.</item>
-        <item>Layout di testo, account e contenuti potrebbero non essere visualizzati correttamente.</item>
+        <item>Disposizioni del testo, account e contenuti potrebbero non essere visualizzati correttamente.</item>
     </string-array>
     <string-array name="operate_entries">
         <item>@string/auto_task_operation_open</item>
